# llm-quantization-benchmarks

./: .gitignore  ASSIGNMENT.md  main.py  pyproject.toml  quantizer_experiment_report.aux  quantizer_experiment_report.fdb_latexmk  quantizer_experiment_report.fls  quantizer_experiment_report.out  quantizer_experiment_report.tex  quantizer_sample_analysis.ipynb  quantizer_sample_collection.ipynb  quantizer_sample_size_experiment.ipynb  quantizer_tests.ipynb
leech_lattice_vector_quantizer/: gaussian_baseline_quantizers.py  golay.py  leech_lattice_vector_quantizer.py  leech_lattice_vector_quantizer_gpu.py  llvq_cuda_dequantize.py  llvq_cuda_quantize.py
results/llm_weight_pilot/Qwen__Qwen3-0.6B_block_rms_30/: metadata.json  pilot_experiment.csv  summary.csv
results/llm_weight_pilot/Qwen__Qwen3-0.6B_none_30/: metadata.json  pilot_experiment.csv  summary.csv
results/quantizer_sample_size_experiment/seed0/: final_experiment.csv  pilot_experiment.csv
results/quantizer_sample_size_experiment/seed0_20260703_123743/: final_experiment.csv  pilot_experiment.csv
results/quantizer_sample_size_experiment/seed0_20260703_130258/: final_experiment.csv  pilot_experiment.csv
results/quantizer_sample_size_experiment/seed0_20260703_154357/: final_experiment.csv  pilot_experiment.csv
results/quantizer_sample_size_experiment/seed0_20260703_154651/: final_experiment.csv  pilot_experiment.csv
results/quantizer_sample_size_experiment/seed0_20260703_155147/: final_experiment.csv  pilot_experiment.csv
scripts/: llm_weight_pilot.py
(+24 files in other folders)
