[project]
name = "llm-quantization-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.0",
    "matplotlib>=3.10.0",
    "pandas>=3.0.3",
    "scipy>=1.16.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
]
